--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <title>Weather App</title>
 </head>
 <body>
@@ -13,5 +14,6 @@
         <input type="text" id="city" name="city" required>
         <button type="submit">Get Weather</button>
     </form>
+    <script src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
