--- a/static/styles.css
+++ b/static/styles.css
@@ -3,4 +3,6 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
+    background-image: url('/static/images/taylor-van-riper-yQorCngxzwI-unsplash.jpg');
 }
+
