re working the site, getting more familiar with how flask works

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,18 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Da Weather</h1>
-
-    <label for="searchInput">Enter Location:</label>
-    <input type="text" id="searchInput" name="searchInput" required>
-    <button id="searchButton">Search</button>
-
-    <div id="weatherContainer"></div>
+    <div id="content">
+        <h1>Da Weather</h1>
     
+        <label for="searchInput">Enter Location:</label>
+        <input type="text" id="searchInput" name="searchInput" required>
+        <button id="searchButton">Search</button>
+    
+        <div id="weatherContainer">            
+            <h2 id="temperatureResult"></h2>    
+            <h2 id="descriptionResult"></h2>        
+        </div>
+    </div>   
     <script src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
