--- a/static/styles.css
+++ b/static/styles.css
@@ -4,5 +4,21 @@
 body{
     font-family: 'Open Sans', sans-serif;
     background-image: url('/static/images/taylor-van-riper-yQorCngxzwI-unsplash.jpg');
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
+h1{
+    text-align: center;
+}
+
+
+#weatherContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
