--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&family=Orbitron&family=Unbounded:wght@300&display=swap');
 
+.flex-col-centre{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-row-centre{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-row-between{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 
 body{
     font-family: 'Open Sans', sans-serif;
@@ -11,14 +33,37 @@ body{
     align-items: center;
 }
 
-h1{
+h1, h2{
     text-align: center;
 }
 
+#top-banner{
+
+
+}
+
+#search-div{
+
+}
 
 #weatherContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    
+}
+
+.weather-content{
+    background-color: pink;
+    width: 500px;
+    height: 250px;
+}
+
+.weather-top{
+
+    width: 100%;
+    height: 50px;
+}
+
+.topBtn{
+    height: 50px;
+    width: 50px;
+    background-color: rgb(212, 151, 161);
 }
