--- a/static/styles.css
+++ b/static/styles.css
@@ -46,7 +46,7 @@ h1, h2{
 
 }
 
-#weatherContainer{
+#weather-container{
     
 }
 
@@ -57,13 +57,37 @@ h1, h2{
 }
 
 .weather-top{
-
     width: 100%;
     height: 50px;
 }
 
-.topBtn{
-    height: 50px;
-    width: 50px;
+.top-title{
+    width: 30%;
+    height: 100%;
+    background-color: rgb(151, 208, 212);
+}
+.top-desc{
+    width: 40%;
+    height: 100%;
+    background-color: rgb(212, 185, 151);
+}
+.top-btn{ 
+    width: 30%;       
+    height: 100%;
     background-color: rgb(212, 151, 161);
+}
+
+.middle-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+    width: 100%;
+    height: 300px;
+    background-color: rgb(103, 64, 110);
+
+}
+.hide{
+    display: none;
 }
