small fixes, start of CRUD

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <h2 id="temperatureResult"></h2>    
         <h2 id="descriptionResult"></h2> 
 
-        <div id="weatherContainer" class="flex-row-between">            
+        <div id="weatherContainer" class="flex-col-centre">            
                    
         </div>
         
