--- a/static/styles.css
+++ b/static/styles.css
@@ -47,6 +47,11 @@ h1, h2{
 }
 
 #weather-container{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     
 }
 
@@ -54,6 +59,8 @@ h1, h2{
     background-color: pink;
     width: 500px;
     height: 250px;
+
+    margin-bottom: 50px;
 }
 
 .weather-top{
@@ -84,7 +91,7 @@ h1, h2{
     align-items: center;
 
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-color: rgb(103, 64, 110);
 
 }
